# catCad

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  imgui.ini
schema/: vectorGraphics.capnp
src/: main.cpp
src/apps/: base.cpp  base.hpp
